5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1638_2728.log
== TEST (2019-04-16 02:26:58) 
-- CODE:
km = float (input("Digite quantos km foram percorridos:"))
car = input("Digite qaul o tipo do carro? (A/B)  ")
if (car == "A"):
	consumo = (km*8)
else (car == "B"):
	consumo = (km*12)
print (round (consumo,2))	
-- ERROR:
File "XXXX", line 5
    else (car == "B"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:27:35) 
-- CODE:
km = float (input("Digite quantos km foram percorridos:"))
car = input("Digite qaul o tipo do carro? (A / B)  ")
if (car == "A"):
	consumo = (km*8)
else (car == "B"):
	consumo = (km*12)
print (round (consumo,2))	
-- ERROR:
File "XXXX", line 5
    else (car == "B"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:27:47) 
-- CODE:
km = float (input("Digite quantos km foram percorridos:"))
car = input("Digite qaul o tipo do carro? (A / B)  ")
if (car == "A"):
	consumo = (km*8)
else:
	consumo = (km*12)
print (round (consumo,2))	
-- OUTPUT:
780.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:28:23) 
-- CODE:
km = float (input("Digite quantos km foram percorridos:"))
car = input("Digite qaul o tipo do carro? (A / B)  ")
if (car == "A"):
	consumo = (km/8)
else:
	consumo = (km/12)
print (round (consumo,2))	
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 02:28:35) 
-- CODE:
km = float (input("Digite quantos km foram percorridos:"))
car = input("Digite qaul o tipo do carro? (A / B)  ")
if (car == "A"):
	consumo = (km/8)
else:
	consumo = (km/12)
print (round (consumo,2))	
-- EXECUTION TIME:
0.156322
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
